--- a/requirements.txt
+++ b/requirements.txt
@@ -1,40 +1,120 @@
 annotated-types==0.7.0
 anyio==4.8.0
+asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1733250440834/work
+beautifulsoup4==4.13.3
+Bottleneck @ file:///croot/bottleneck_1731058641041/work
+Brotli==1.1.0
+bs4==0.0.2
+cachetools==5.5.2
 certifi==2025.1.31
+cffi==1.17.1
+chardet==5.2.0
 charset-normalizer==3.4.1
 click @ file:///work/perseverance-python-buildout/croot/click_1698845879718/work
 colorama @ file:///work/perseverance-python-buildout/croot/colorama_1698847155966/work
+comm @ file:///home/conda/feedstock_root/build_artifacts/comm_1733502965406/work
+commonmark==0.9.1
+cssselect2==0.8.0
+debugpy @ file:///croot/debugpy_1736267418885/work
+decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1740384970518/work
+docstring_parser==0.16
 eval_type_backport==0.2.2
+exceptiongroup @ file:///home/conda/feedstock_root/build_artifacts/exceptiongroup_1733208806608/work
+executing @ file:///home/conda/feedstock_root/build_artifacts/executing_1733569351617/work
+fonttools==4.56.0
+google-api-core==2.24.2
+google-auth==2.38.0
+google-cloud-aiplatform==1.85.0
+google-cloud-bigquery==3.30.0
+google-cloud-core==2.4.3
+google-cloud-resource-manager==1.14.2
+google-cloud-storage==2.19.0
+google-crc32c==1.7.0
+google-genai==1.7.0
+google-resumable-media==2.7.2
+googleapis-common-protos==1.69.2
+grpc-google-iam-v1==0.14.2
+grpcio==1.71.0
+grpcio-status==1.71.0
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
 idna==3.10
 ImageHash==4.3.2
+importlib_metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1737420181517/work
+ipykernel @ file:///home/conda/feedstock_root/build_artifacts/ipykernel_1719845459717/work
+ipython @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_ipython_1741457126/work
+ipython_pygments_lexers @ file:///home/conda/feedstock_root/build_artifacts/ipython_pygments_lexers_1737123620466/work
+jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1733300866624/work
 jsonpath-python==1.0.6
+jupyter_client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1733440914442/work
+jupyter_core @ file:///home/conda/feedstock_root/build_artifacts/jupyter_core_1727163409502/work
 loguru @ file:///croot/loguru_1729800300339/work
+Markdown==3.7
 markdown-it-py @ file:///work/perseverance-python-buildout/croot/markdown-it-py_1698846045803/work
+matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1733416936468/work
 mdurl @ file:///work/perseverance-python-buildout/croot/mdurl_1698845653285/work
 mistralai==1.5.1
 mypy-extensions==1.0.0
+nest_asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1733325553580/work
+numexpr @ file:///croot/numexpr_1730215937391/work
 numpy==2.2.3
+packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1733203243479/work
+pandas @ file:///croot/pandas_1732735089971/work/dist/pandas-2.2.3-cp312-cp312-linux_x86_64.whl#sha256=57b66702d418720ec8483f7c4ec7c08d41815316ad7ce09d5b7bbc34eefcfdfd
+parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1733271261340/work
+pdfkit==1.0.0
+pexpect @ file:///home/conda/feedstock_root/build_artifacts/pexpect_1733301927746/work
+pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1733327343728/work
 pillow==11.1.0
--e git+https://github.com/fllin1/plu.git@452276f8986f1212d2d9a56459082c1ce4efb4d9#egg=plu
+platformdirs @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_platformdirs_1742485085/work
+-e git+https://github.com/fllin1/plu.git@88c90a721b14fc9c3cb4afd2d7d6a91df0fb001c#egg=plu
+prompt_toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1737453357274/work
+proto-plus==1.26.1
+protobuf==5.29.4
+psutil @ file:///croot/psutil_1736367091698/work
+ptyprocess @ file:///home/conda/feedstock_root/build_artifacts/ptyprocess_1733302279685/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl#sha256=92c32ff62b5fd8cf325bec5ab90d7be3d2a8ca8c8a3813ff487a8d2002630d1f
+pure_eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1733569405015/work
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pycparser==2.22
 pydantic==2.10.6
 pydantic_core==2.27.2
+pydyf==0.11.0
 Pygments @ file:///work/perseverance-python-buildout/croot/pygments_1698846270603/work
-python-dateutil==2.9.0.post0
+PyMuPDF==1.25.4
+pyphen==0.17.2
+python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1733215673016/work
 python-dotenv==1.0.1
+pytz @ file:///croot/pytz_1713974312559/work
 PyWavelets==1.8.0
+PyYAML==6.0.2
+pyzmq @ file:///croot/pyzmq_1734687138743/work
+reportlab==4.3.1
 requests==2.32.3
 rich @ file:///croot/rich_1732638981168/work
+rsa==4.9
 scipy==1.15.2
 setuptools==75.8.0
+shapely==2.0.7
 shellingham @ file:///work/perseverance-python-buildout/croot/shellingham_1698846956774/work
-six==1.17.0
+six @ file:///home/conda/feedstock_root/build_artifacts/six_1733380938961/work
 sniffio==1.3.1
+soupsieve==2.6
+stack_data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1733569443808/work
+tinycss2==1.4.0
+tinyhtml5==2.0.0
+tornado @ file:///croot/tornado_1733960490606/work
 tqdm @ file:///croot/tqdm_1738943501192/work
+traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1733367359838/work
 typer @ file:///work/perseverance-python-buildout/croot/typer_1698863732129/work
 typing-inspect==0.9.0
 typing_extensions @ file:///croot/typing_extensions_1734714854207/work
+tzdata @ file:///croot/python-tzdata_1690578112552/work
 urllib3==2.3.0
+wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1733231326287/work
+weasyprint==65.0
+webencodings==0.5.1
+websockets==15.0.1
 wheel==0.45.1
+zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1732827521216/work
+zopfli==0.2.3.post1
